networking/networkpolicies/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-backend
  labels:
    type: backend
spec:
  containers:
    - name: web
      image: nginx

---

apiVersion: v1
kind: Service
metadata:
  name: mysv-backend
spec:
  ports:
    - port: 8081
      targetPort: 80
  selector:
    type: backend
