networking/networkpolicies/database.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-database
  labels:
    type: database
spec:
  containers:
  - image: mysql
    name: mysql
---

apiVersion: v1
kind: Service
metadata:
  name: mysv-database
spec:
  ports:
    - port: 8081
      targetPort: 3306
  selector:
    type: database
