networking/networkpolicies/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-frontend
  labels:
    type: frontend
spec:
  containers:
    - name: web
      image: nginx

---

apiVersion: v1
kind: Service
metadata:
  name: mysv-frontend
spec:
  ports:
    - port: 8081
      targetPort: 80
  selector:
    type: frontend
